# powermix

./: .gitignore  AGENTS.md  README.md  hacs.json  info.md  pyproject.toml
custom_components/powermix/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
custom_components/powermix/lib/: __init__.py  _vendor.py
custom_components/powermix/translations/: en.json
docs/: configuration.md  dev-instance.md
ha_dev/: compose.yaml
ha_dev/template_config/: configuration.yaml
ha_dev/template_config/.storage/: auth  auth_provider.homeassistant  onboarding
scripts/: ha  test
src/powermix/: __init__.py  calculator.py
src/powermix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: helpers.py  test_calculator.py  test_config_flow.py  test_sensor_platform.py
